control_api (1.2.0) unstable; urgency=low

  * New TemplateToDo method:
    * GET /v1/template_to_dos
  * GET /v1/distributed_to_dos
    * Added "tags[]" parameter to filter DistributedToDo objects
    * Added "tags" to the DistributedToDo objects
  * GET /v1/distributed_to_dos/:uuid
    * Added "tags" to the DistributedToDo object

 -- Continuity Control Engineering  TODO

control_api (1.1.0) stable; urgency=low

  * POST /v1/distributed_to_dos
    * Fix an intermittent issue when parsing "due_on"
  * GET /v1/distributed_to_dos
    * Added "name" to the DistributedToDo objects
  * GET /v1/distributed_to_dos/:uuid
    * Added "name" to the DistributedToDo object

 -- Continuity Control Engineering  Fri, 6 Dec 2013 18:00:00 +0000

control_api (1.0.0) stable; urgency=low

  * First public API documentation release
  * First public API availability
  * New utility method:
    * GET  /v1/status
  * New DistributedToDo methods:
    * POST /v1/distributed_to_dos
    * GET  /v1/distributed_to_dos
    * GET  /v1/distributed_to_dos/:uuid

 -- Continuity Control Engineering  Wed, 27 Nov 2013 00:00:00 +0000